# tea

./: .gitignore  LICENSE  README-es.md  README.md
compiler/: CMakeLists.txt  CMakePresets.json
compiler/include/TEA/: Lexer.hpp  Parser.hpp  Token.hpp
compiler/include/TEA/AST/: BinaryExprAST.hpp  CallExprAST.hpp  ExprAST.hpp  FunctionAST.hpp  NumberExprAST.hpp  PrototypeAST.hpp  VariableExprAST.hpp
compiler/include/tear/: Lexer.hpp
compiler/src/: Lexer.cpp  Parser.cpp  Token.cpp  main.cpp
compiler/src/include/: Token.hpp
scripts/: compile.sh
